--- a/Moncompte/templates/connexion.html
+++ b/Moncompte/templates/connexion.html
@@ -1,6 +1,6 @@
 {%extends 'base.html'%} {%block erreur%} {{msg.etudiant.etud_lieu}} {%endblock erreur%} {%block content%}
 <form action="{%url 'connexion'%}" method="POST" enctype="multipart/form-data">
     {% csrf_token%} {{ form.as_p}}
-    <button type="submit" class="btn btn-primary" style="margin-left: 43%;">se connecter</button>
+    <button type="submit" class="btn btn-primary">se connecter</button>
 </form>
 {%endblock content%}
