klk modifications au niveau de l base de donnée

--- a/Moncompte/templates/base.html
+++ b/Moncompte/templates/base.html
@@ -80,7 +80,7 @@
             background-color: rgb(68, 68, 102);
             font-family: inherit;
             color: white;
-            margin-top: 400px;
+            margin-top: 445px;
         }
         
         body section#content {
@@ -90,6 +90,17 @@
             width: 500px;
             margin: 0 0 0 -250px;
             padding: 0;
+        }
+        
+        #monbtn {
+            float: middle;
+            border-radius: 10px;
+            background-color: rgb(68, 68, 102);
+            color: white;
+        }
+        
+        #centre {
+            padding-left: 210px;
         }
     </style>
 
@@ -108,7 +119,7 @@
 
     </div>
     <footer>
-        <div class="container">
+        <div class="container shadow">
             <center>
                 <table>
                     <tbody>
