--- a/Moncompte/templates/base2.html
+++ b/Moncompte/templates/base2.html
@@ -79,14 +79,15 @@
             box-sizing: border-box;
             border-top: 1px solid rgba(255, 255, 255, .1);
             border-bottom: 1px solid black;
-            transition: .4s;
+            transition: .5s;
         }
         
         ul li:hover a {
             padding-left: 20px;
-            background-color: rgb(219, 157, 157);
+            background-color: white;
             border-radius: 30px;
             letter-spacing: 2px;
+            border-left: 5px solid blue;
         }
         
         #contenu {
