--- a/Moncompte/templates/base2.html
+++ b/Moncompte/templates/base2.html
@@ -91,9 +91,39 @@
         }
         
         #contenu {
-            position: fixed;
+            position: absolute;
             margin-left: 210px;
             width: 82%;
+        }
+        
+        #monbtn {
+            float: middle;
+            border-radius: 2px;
+            background-color: rgb(68, 68, 102);
+            color: white;
+            padding-left: 10px;
+            padding-right: 10px;
+            padding-bottom: 7px;
+        }
+        
+        .fieldliste dt {
+            display: block;
+            width: 350px;
+            float: left;
+            text-align: right;
+            padding: 0 10px 0 0;
+            font-weight: bold;
+        }
+        
+        .fieldliste dd {
+            display: block;
+            width: 100%;
+        }
+        
+        #ttrow {
+            display: block;
+            padding-bottom: 25px;
+            margin-left: 57%;
         }
     </style>
     <header>
@@ -104,7 +134,9 @@
         </nav>
     </header>
     <aside id="menu1">
-        <header>MENU</header>
+        <header>
+            <h3>MENU</h3>
+        </header>
         <ul>
             <li><a href="{% url 'bienvenue' %}"><i> Tableau de bord </i> </a></li>
             <li> <a href="{% url 'syllabus' %}"><i> Syllabus</i> </a></li>
@@ -132,22 +164,3 @@
     </div>
 
 </html>
-
-
-
-
-<!-- <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <p></p>
-                <p></p>
-                <p></p>...
-            </div>
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
-                    </div> -->
